# dungeons-of-ajentia

./: .gitignore  README.md  app.py  level_creator.ipynb  main.py  pyproject.toml
frontend/: app.py
levels/data/: dwarven_depths.json  template.json
src/: main.py
src/agents/: party_member.py
src/agents/leader/: leader_agent.py  leader_prompt.txt  leader_tools.py
src/db/: schema.py  session.py
src/display/: action_card.py  thought_card.py
src/party/: build_party.py  invoke_party.py  stream_party.py
src/service/level/: build_level.py  load_level.py
