[project]
name = "dungeons-of-ajentia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gqlalchemy>=1.8.0",
    "langchain>=1.2.4",
    "langchain-core>=1.2.7",
    "langgraph>=1.0.6",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "streamlit>=1.52.2",
]
